Added Swagger OpenAPI v3. Renamed DTO.